<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/nav_add" />
        <item
            android:id="@+id/nav_show"
            android:icon="@drawable/ic_menu_show"
            android:title="@string/nav_show" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_menu_load"
            android:title="@string/nav_update" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_search" />
    </group>

</menu>
