<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/registroItemLayout">

    <FrameLayout android:id="@+id/frame"
        android:layout_width="40dp"
        android:layout_height="80dp">

        <ImageView android:id="@+id/ContactImg"
            android:layout_marginTop="20dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_filter_none" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/carnet_hint"
            android:id="@+id/textViewCarnet"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/nota_hint"
            android:id="@+id/textViewNota"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/materia_hint"
            android:id="@+id/textViewMateria"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cat_hint"
            android:id="@+id/textViewDocente"
            />


    </LinearLayout>


</LinearLayout>