<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/firstLayout"
    android:orientation="vertical"
    android:background="#fff"
    android:gravity="center_horizontal">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text_update"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat = "@drawable/ic_perm_identity_"
            android:layout_gravity="center"/>

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/editTextUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/carnet_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat = "@drawable/ic_exposure_plus"
            android:layout_gravity="center"/>

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/editTextNuevaNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/nueva_nota_hint" />

    </LinearLayout>


    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"/>

</LinearLayout>